Basic rotation gizmo

--- a/engine/editor/level_editor/private/CMakeLists.txt
+++ b/engine/editor/level_editor/private/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SOURCE_FILES
     ${SOURCE_FILES}
-    "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/arrow_3d.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/gizmo_types.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/gizmo.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/viewport_camera.cpp"
