--- a/engine/editor/level_editor/public/CMakeLists.txt
+++ b/engine/editor/level_editor/public/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(HEADER_FILES
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/arrow_3d.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/dial_3d.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/gizmo.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/viewport_camera.hpp"
