Removed Cube and Plane classes

--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -10,13 +10,11 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/ecs.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input_core.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/mesh.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/time/time.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/assets.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/guid.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/key.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp"
     PARENT_SCOPE
 )
 
