--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -18,13 +18,11 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/entity.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/key_state.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/mesh.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/assets.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/guid.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/key.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/material.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/resource_manager.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/time.hpp"
     PARENT_SCOPE
