--- a/engine/source/rendering/public/CMakeLists.txt
+++ b/engine/source/rendering/public/CMakeLists.txt
@@ -2,6 +2,8 @@ set(HEADER_FILES
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/framebuffer.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/glad.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/opengl_enums_defs.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/opengl_enums_undefs.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/opengl.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer.hpp"
     # "${CMAKE_CURRENT_SOURCE_DIR}/uniform_buffer.hpp"
