editor preferences to make settings configurable

--- a/engine/editor/CMakeLists.txt
+++ b/engine/editor/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_events.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_main.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/editor_preferences.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_window.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/user_input_filter.cpp"
@@ -8,6 +9,7 @@ set(SOURCE_FILES
     
 set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_events.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/editor_preferences.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_subsystem_fwd.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_window.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor.hpp"
