Gizmo rework There's a fair amount of debug code in the gizmo library for drawing geometry

--- a/engine/source/physics/public/CmakeLists.txt
+++ b/engine/source/physics/public/CmakeLists.txt
@@ -1,6 +1,7 @@
 set(HEADER_FILES
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/intersection_tests.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/intersections_common.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/line.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/obb.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ray.hpp"
