Moved gizmo state into global context Allows easy sharing of gizmo state between viewports

--- a/engine/editor/level_editor/public/CMakeLists.txt
+++ b/engine/editor/level_editor/public/CMakeLists.txt
@@ -3,6 +3,7 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/arrow_3d.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/dial_3d.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/gizmo.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gizmo_context.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/viewport_camera.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/viewport.hpp"
     PARENT_SCOPE
