--- a/engine/editor/level_editor/private/CMakeLists.txt
+++ b/engine/editor/level_editor/private/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/gizmo_types.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/gizmo/gizmo.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gizmo_context.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/viewport_camera.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/viewport.cpp"
     PARENT_SCOPE
