Game build rendering rework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(ENGINE_FOLDER_NAME "Engine")
 set(ENGINE_DEPENDENCIES_FOLDER "Dependencies")
 set(ENGINE_TOOLS_FOLDER "Tools")
 
+set(ENGINE_WITH_EDITOR 0)
+
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" AND NOT MSVC))
     # Compiling with GCC or Clang not simulating MSVC
     set(ENGINE_CXX_FLAGS 
