--- a/engine/source/core/public/CMakeLists.txt
+++ b/engine/source/core/public/CMakeLists.txt
@@ -15,7 +15,6 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/detail/utility_common.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/algorithm.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/allocator.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/config.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/fixed_array.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/iterators.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/memory.hpp"
@@ -24,6 +23,7 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_utils.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_view.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/tags.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/type_traits.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/utility.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/vector.hpp"
