--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "engine/dependencies/freetype"]
 	path = engine/dependencies/freetype
 	url = https://github.com/kociap/FreeType.git
+[submodule "engine/dependencies/zlib"]
+	path = engine/dependencies/zlib
+	url = https://github.com/kociap/zlib.git
