prepared windowing for editor build

--- a/engine/source/windowing/private/CMakeLists.txt
+++ b/engine/source/windowing/private/CMakeLists.txt
@@ -1,6 +1,21 @@
 set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/window.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/window_callbacks.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/window_input.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/windowing_internal.cpp"
+    PARENT_SCOPE
+)
+
+set(HEADER_FILES 
+    ${HEADER_FILES}
+    "${CMAKE_CURRENT_SOURCE_DIR}/glfw.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/window_input.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/windowing_internal.hpp"
+    PARENT_SCOPE
+)
+
+set(PRIVATE_INCLUDE_DIRECTORIES
+    ${PRIVATE_INCLUDE_DIRECTORIES}
+    "${CMAKE_CURRENT_SOURCE_DIR}"
     PARENT_SCOPE
 )
