reworked windowing api

--- a/engine/source/windowing/private/CMakeLists.txt
+++ b/engine/source/windowing/private/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCE_FILES
 set(HEADER_FILES 
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/glfw.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/window.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/window_input.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/windowing_internal.hpp"
     PARENT_SCOPE
