--- a/engine/dependencies/CMakeLists.txt
+++ b/engine/dependencies/CMakeLists.txt
@@ -4,15 +4,15 @@ set(GLFW_INSTALL CACHE BOOL OFF)
 
 add_subdirectory(freetype)
 add_subdirectory(glad)
-add_subdirectory(glfw)
 add_subdirectory(zlib)
+add_subdirectory(mimas)
 
-set_target_properties(glfw glad zlib zlibstatic freetype
+set_target_properties(glad zlib zlibstatic freetype mimas
     PROPERTIES
     FOLDER "${ENGINE_DEPENDENCIES_FOLDER}"
 )
 
-set_target_properties(glfw glad zlib zlibstatic freetype
+set_target_properties(glad zlib zlibstatic freetype mimas
     PROPERTIES
     COMPILE_OPTIONS ${ENGINE_CXX_DEPENDENCIES_FLAGS}
 )
