--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "glfw"]
-	path = engine/dependencies/glfw
-	url = https://github.com/kociap/glfw.git
 [submodule "engine/dependencies/freetype"]
 	path = engine/dependencies/freetype
 	url = https://github.com/kociap/FreeType.git
@@ -10,3 +7,6 @@
 [submodule "engine/dependencies/glad"]
 	path = engine/dependencies/glad
 	url = https://github.com/kociap/glad.git
+[submodule "engine/dependencies/mimas"]
+	path = engine/dependencies/mimas
+	url = https://github.com/kociap/mimas.git
