--- a/engine/tools/CMakeLists.txt
+++ b/engine/tools/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.13)
 
 project(Codegen CXX)
 
@@ -26,13 +26,24 @@ target_link_libraries(Codegen
 target_compile_definitions(Codegen 
     PRIVATE 
     ENGINE_API=${ENGINE_DLL_IMPORT} 
-    ANTON_COMPILER_ID=${ENGINE_COMPILER_ID} 
-    ANTON_COMPILER_CLANG=${ENGINE_COMPILER_CLANG} 
-    ANTON_COMPILER_GCC=${ENGINE_COMPILER_GCC} 
-    ANTON_COMPILER_MSVC=${ENGINE_COMPILER_MSVC} 
-    ANTON_COMPILER_UNKNOWN=${ENGINE_COMPILER_UNKNOWN}
     ANTON_WITH_EDITOR=${ENGINE_WITH_EDITOR}
     # Use unicode instead of multibyte charset (VS)
     UNICODE
     _UNICODE
 )
+
+if(ENGINE_COMPILER_CLANG)
+    target_compile_definitions(Codegen PRIVATE ANTON_COMPILER_CLANG)
+endif()
+
+if(ENGINE_COMPILER_GCC)
+    target_compile_definitions(Codegen PRIVATE ANTON_COMPILER_GCC)
+endif()
+
+if(ENGINE_COMPILER_MSVC)
+    target_compile_definitions(Codegen PRIVATE ANTON_COMPILER_MSVC)
+endif()
+
+if(ENGINE_COMPILER_UNKNOWN)
+    target_compile_definitions(Codegen PRIVATE ANTON_COMPILER_UNKNOWN)
+endif()
