--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -16,6 +16,7 @@ target_compile_definitions(anton_engine
     # Use unicode instead of multibyte charset (VS)
     UNICODE
     _UNICODE
+    _CRT_SECURE_NO_WARNINGS
 )
 
 if(ENGINE_COMPILER_CLANG)
@@ -105,6 +106,9 @@ target_compile_definitions(anton_engine_loader
     ENGINE_API=${ENGINE_DLL_IMPORT} 
     GAME_API=${ENGINE_DLL_IMPORT} 
     ANTON_WITH_EDITOR=${ENGINE_WITH_EDITOR}
+    UNICODE
+    _UNICODE
+    _CRT_SECURE_NO_WARNINGS
 )
 
 if(ENGINE_COMPILER_CLANG)
@@ -139,9 +143,9 @@ set_target_properties(anton_engine_loader
 target_link_libraries(anton_engine_loader anton_engine)
 
 # target_link_options(anton_engine_loader
-#     PRIVATE /PROFILE
+#     PRIVATE ${ANTON_LINK_FLAGS} "clang_rt.asan-x86_64.lib"
 # )
 
-# target_link_options(${ENGINE_NAME}
-#     PRIVATE /PROFILE
+# target_link_options(anton_engine
+#     PRIVATE ${ANTON_LINK_FLAGS} "clang_rt.asan_dll_thunk-x86_64.lib"
 # )
